# src/routes/AuthRouter.js
@@ -4,6 +4,7 @@ const authController = require("../controllers/AuthController");
 const { AuthPermission } = require("../middleware/AuthPermission");
 
 router.post("/login", authController.loginUser);
+router.post("/register", authController.registerUser);
 router.post("/logout", authController.logoutUser);
 router.get("/me", AuthPermission("", true), authController.getAuthMe);
 router.put("/me", AuthPermission("", true), authController.updateAuthMe);
